fix: wrap whole app in ErrorBoundary

--- a/src/app/scss/pages/_main.scss
+++ b/src/app/scss/pages/_main.scss
@@ -8,16 +8,4 @@
     top: 2rem;
     right: 2rem;
   }
-
-  &__error-message {
-    padding: 0.7rem 1rem;
-
-    position: absolute;
-    top: 2rem;
-    right: 2rem;
-    border: 1px solid red;
-    border-radius: 7px;
-
-    color: red;
-  }
 }
